# C-

./: AddBedInformation.c  AddBedInformation.h  Backup.c  Backup.h  CMakeLists.txt  Change.c  Change.h  CountSparedBed.c  CountSparedBed.h  Delete.c  Delete.h  FindAndPrint.c  FindAndPrint.h  MultipleClassificationStatistics.c  MultipleClassificationStatistics.h  Print.c  Print.h  PrintSpareApartment.c  PrintSpareApartment.h  Sort.c  Sort.h  Sort2.c  Sort2.h  StatisticsOfFreeBedInACollege.c  StatisticsOfFreeBedInACollege.h  Typein.c  Typein.h  main.c  main.h  main.h.gch  room.txt
