cmake_minimum_required(VERSION 3.27)
project(C)

set(CMAKE_C_STANDARD 11)

add_executable(main
        main.c
        Typein.c
        Sort2.c
        main.h
        Typein.h
        CountSparedBed.c
        CountSparedBed.h
        Sort.c
        Sort.h
        PrintSpareApartment.c
        PrintSpareApartment.h
        Print.c
        Print.h
        Delete.c
        Delete.h
        FindAndPrint.c
        FindAndPrint.h
        StatisticsOfFreeBedInACollege.c
        StatisticsOfFreeBedInACollege.h
        Change.c
        Change.h
        AddBedInformation.c
        AddBedInformation.h
        Sort2.h
        MultipleClassificationStatistics.c
        MultipleClassificationStatistics.h
        Backup.c
        Backup.h

)
